# vsim

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  COPYRIGHT  LICENSE  README.md  THIRD-PARTY-NOTICES  test.bat  test.sh
assets/: darkstyle.qss  (+6 more)
experiments/CanvasEditor_experiment/: CMakeLists.txt  CanvasEditor_experiment.cpp
experiments/Canvas_experiment/: CMakeLists.txt  Canvas_experiment.cpp
experiments/FutureDialog_experiment/: CMakeLists.txt  FutureDialog_experiment.cpp  Multithread.cpp  Multithread.h  Multithread.ui
experiments/NumberSlider_experiment/: CMakeLists.txt  NumberSlider_experiment.cpp  funky.h
maketest/: CMakeLists.txt  cmake.txt  foo.cpp  foo.h  hello.cpp  hello.h  hello.h.in
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BaseFirstPersonManipulator.cpp  BaseFirstPersonManipulator.h  BasicRichTextEdit.cpp  BasicRichTextEdit.h  BasicRichTextEdit.ui  BasicRichTextEditWidget.cpp  BasicRichTextEditWidget.h  BasicRichTextEdit_experiment.cpp  BrandingControl.cpp  BrandingControl.h  BrandingOverlay.cpp  BrandingOverlay.h  CMakeLists.txt  CanvasSettings.ui  CheckableListProxy.cpp  CheckableListProxy.h  Command.h  CommandStack.h  CoordinateWidget.cpp  CoordinateWidget.h  DisplaySettingsDialog.cpp  DisplaySettingsDialog.h  DisplaySettingsDialog.ui  ECategoryLegend.cpp  ECategoryLegend.h  ECategoryLegend_experiment.cpp  ERBar.cpp  ERBar.h  ERBar.ui  ERSerializer.cpp  ERSerializer.h  ERSerializer_test.cpp  EditDeleteDelegate.cpp  EditDeleteDelegate.h  ElidedLabel.cpp  ExportDialog.cpp  ExportDialog.h  (+199 more)
src/Canvas/: CMakeLists.txt  CanvasContainer.cpp  CanvasContainer.h  CanvasControl.cpp  CanvasControl.h  CanvasEditor.cpp  CanvasEditor.h  CanvasEditor_experiment.cpp  CanvasScene.cpp  CanvasScene.h  CanvasSerializer.cpp  CanvasSerializer.h  CanvasSerializer_test.cpp  CanvasToolBar.cpp  CanvasToolBar.h  Canvas_experiment.cpp  ChildMaskFilter.cpp  ChildMaskFilter.h  LabelStyle.cpp  LabelStyle.h  LabelStyleGroup.cpp  LabelStyleGroup.h  StyleSettingsDialog.cpp  StyleSettingsDialog.h  StyleSettingsDialog.ui  StyleSettingsWidget.cpp  StyleSettingsWidget.h  StyleSettingsWidget.ui  canvas.fbs
src/Core/: CMakeLists.txt  Command.h  GroupCommands.h  GroupModelTemplate.inl  GroupSignals.cpp  GroupSignals.h  GroupTemplate.h  GroupTemplate.inl  Group_test.cpp  HashLock.cpp  HashLock.h  HashLock_test.cpp  ICommandStack.h  LockTable.cpp  LockTable.h  LockTable_test.cpp  OSGObserver.cpp  OSGObserver.h  OSGObserver_test.cpp  SimpleCommandStack.cpp  SimpleCommandStack.h  TypesSerializer.cpp  TypesSerializer.h  Util.cpp  Util.h  Util_test.cpp  VSimInfo.cpp  VSimInfo.h  VecUtil.h  VecUtil_test.cpp  WeakObject.cpp  types.fbs
src/Gui/: CMakeLists.txt  EditDeleteDelegate.cpp  ElidedLabel.cpp  ElidedLabel.h  FutureDialog.h  FutureDialog.ui  NumberSlider.cpp  PasswordDialog.cpp  PasswordDialog.h  PasswordDialog.ui  SimpleWorker.h  TickSlider.h  TitledComboBox.cpp  TitledComboBox.h
src/Model/: CMakeLists.txt  Model.cpp  Model.h  ModelEditDialog.cpp  ModelEditDialog.h  ModelEditDialog.ui  ModelGroup.cpp  ModelGroup.h  ModelGroupModel.cpp  ModelGroupModel.h  ModelInformationDialog.ui  ModelOutliner.cpp  ModelOutliner.h  ModelSerializer.cpp  ModelSerializer.h  ModelUtil.cpp  ModelUtil.h  Model_experiment.cpp  OSGGroupModel.cpp  OSGGroupModel.h  OSGNodeWrapper.cpp  OSGNodeWrapper.h  OSGYearModel.cpp  OSGYearModel.h  ReaderWriterAssImp.cpp  model.fbs
src/Switch/: CMakeLists.txt  SwitchListModel.cpp  SwitchListModel.h  SwitchManager.cpp  SwitchManager.h  SwitchModel.cpp  SwitchModel.h  SwitchWindow.cpp  SwitchWindow.h  Switch_experiment.cpp  Switch_test.cpp
src/assets/: vsim.psd
src/deprecated/: ModelInformationOld.h  SerializerModelInformationOld.cpp  mrichtextedit_old.ui
src/deprecated/narrative/: Narrative.cpp  Narrative.h  NarrativeNode.cpp  NarrativeNode.h  NarrativeOld.cpp  NarrativeOld.h  SerializerNarrative.cpp  SerializerNarrativeNode.cpp  SerializerNarrativeOld.cpp  SerializerNarrativeTransition.cpp
src/deprecated/osgNewWidget/: Canvas.cpp  Canvas.h  Label.cpp  Label.h  SerializerCanvas.cpp  SerializerLabel.cpp  SerializerVSCanvas.cpp  SerializerVSLabel.cpp  SerializerVSWidget.cpp  SerializerWidget.cpp  VSWidget.cpp  VSWidget.h  Widget.cpp  Widget.h
src/experiment/: tabs.ui
src/narrative/: CanvasContainer.cpp  CanvasContainer.h  CanvasControl.cpp  CanvasControl.h  CanvasEditor.cpp  CanvasEditor.h  CanvasScene.cpp  CanvasScene.h  CanvasToolBar.h  CanvasToolbar.cpp  LabelStyle.cpp  LabelStyle.h  LabelStyleGroup.cpp  LabelStyleGroup.h  Narrative.cpp  Narrative.h  Narrative2.cpp  Narrative2.h  NarrativeCanvas.cpp  NarrativeCanvas.h  NarrativeControl.cpp  NarrativeControl.h  NarrativeGroup.cpp  NarrativeGroup.h  NarrativeInfoDialog.cpp  NarrativeInfoDialog.h  NarrativeInfoDialog.ui  NarrativeList.cpp  NarrativeList.h  NarrativeModel.cpp  NarrativeModel.h  NarrativeNode.cpp  NarrativeNode.h  NarrativePlayer.cpp  NarrativePlayer.h  NarrativeReference.cpp  NarrativeReference.h  NarrativeScrollBox.cpp  NarrativeScrollBox.h  NarrativeScrollItem.cpp  (+34 more)
src/osgNewWidget/: Canvas.cpp  Canvas.h  Label.cpp  Label.h  SerializerCanvas.cpp  SerializerLabel.cpp  SerializerVSCanvas.cpp  SerializerVSLabel.cpp  SerializerVSWidget.cpp  SerializerWidget.cpp  VSWidget.cpp  VSWidget.h  Widget.cpp
src/resources/: ECategory.cpp  ECategory.h  ECategoryControl.cpp  ECategoryControl.h  ECategoryEditor.cpp  ECategoryEditor.h  ECategoryGroup.cpp  ECategoryGroup.h  ECategoryModel.cpp  ECategoryModel.h  ERControl.cpp  ERControl.h  ERDialog.cpp  ERDialog.h  ERDialog.ui  ERDisplay.cpp  ERDisplay.h  ERDisplay.ui  EREnums.h  ERFilterArea.cpp  ERFilterArea.h  ERFilterArea.ui  ERFilterConnector.h  ERFilterSortProxy.cpp  ERFilterSortProxy.h  ERScrollBox.cpp  ERScrollBox.h  ERScrollItem.cpp  ERScrollItem.h  ERScrollItem.ui  EResource.cpp  EResource.h  EResourceGroup.cpp  EResourceGroup.h  NewCatDialog.cpp  NewCatDialog.h  NewCatDialog.ui  SerializerECategory.cpp  SerializerECategoryGroup.cpp  SerializerEResource.cpp  (+1 more)
src/windows/: global.props  qt.props  vsim.sln
(+190 files in other folders)
